// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser List Block should render Article 1`] = `
<DocumentFragment>
  <section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              This is a lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <span
                class="emotion-23 emotion-24"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-25 emotion-26"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-27 emotion-28"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-29"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-30"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-31 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              This is a lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <span
                class="emotion-23 emotion-24"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-25 emotion-26"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-27 emotion-28"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-29"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-30"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-58 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              This is a lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <span
                class="emotion-23 emotion-24"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-25 emotion-26"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-27 emotion-28"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-29"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-30"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Teaser List Block should render Event 1`] = `
<DocumentFragment>
  <section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              This is a lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-25 emotion-26"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-27"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-28"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-29 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              This is a lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-25 emotion-26"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-27"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-28"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-54 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              This is a lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-25 emotion-26"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-27"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-28"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Teaser List Block should render Page 1`] = `
<DocumentFragment>
  <section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              This is a lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-25 emotion-26"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-27"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-28"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-29 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              This is a lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-25 emotion-26"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-27"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-28"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-54 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              This is a lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
            <div
              class="emotion-25 emotion-26"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-27"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-28"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Teaser List Block should render WithTitle 1`] = `
<DocumentFragment>
  <section
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h5 emotion-2"
    >
      Foobar Title
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <article
        class="emotion-5 emotion-6"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-7"
          href="https://example.com"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <img
                alt="DSC07717"
                class="emotion-12 emotion-13"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-14 emotion-15"
            >
              <div
                class="emotion-16 emotion-17"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-18 emotion-19"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-20 emotion-21"
            >
              This is a lead
            </p>
            <div
              class="emotion-22 emotion-23"
            >
              <span
                class="emotion-24 emotion-25"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-26 emotion-27"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-28 emotion-29"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-30"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-31"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-32 emotion-6"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-7"
          href="https://example.com"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <img
                alt="DSC07717"
                class="emotion-12 emotion-13"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-14 emotion-15"
            >
              <div
                class="emotion-16 emotion-17"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-18 emotion-19"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-20 emotion-21"
            >
              This is a lead
            </p>
            <div
              class="emotion-22 emotion-23"
            >
              <span
                class="emotion-24 emotion-25"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-26 emotion-27"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-28 emotion-29"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-30"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-31"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-59 emotion-6"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-7"
          href="https://example.com"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <img
                alt="DSC07717"
                class="emotion-12 emotion-13"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-14 emotion-15"
            >
              <div
                class="emotion-16 emotion-17"
              >
                This is a pretitle
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-18 emotion-19"
            >
              This is a title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-20 emotion-21"
            >
              This is a lead
            </p>
            <div
              class="emotion-22 emotion-23"
            >
              <span
                class="emotion-24 emotion-25"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-26 emotion-27"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
            <div
              class="emotion-28 emotion-29"
            >
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-outlinedPrimary emotion-30"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium emotion-31"
                >
                  Concert
                </span>
              </div>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;
